# 100DaysCommitLog

./: Dockerfile  README.md  pyproject.toml  utils.py
app/: commits_graph.py  github_scraper.py  main.py  models.py
