[tool.poetry]
name = "100dayscommitlog"
version = "0.1.0"
description = "A fun commit logger so you and your friends can track your #100DaysofCode progress together."
authors = ["Bruna Calistrate <bruna.calistrate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.ruff]

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

line-length = 80
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.isort]
profile = "black"
line_length = 80
extend_skip = ['migrations']

[tool.taskipy.tasks]
lint = 'ruff . && black --check . --diff'
format = 'black .  && isort .'
run = 'uvicorn app.main:create_app --reload'